--- a/Section31/Swipe Project/style.css
+++ b/Section31/Swipe Project/style.css
@@ -1,4 +1,7 @@
+/* VARIABLES */
+
 :root {
+  /* TEXT VARIABLES */
   --text-dark: #000;
   --text-light: #fff;
   --text-grey: #adbdcc;
@@ -19,14 +22,15 @@
   --secondary-text-size: 14px;
   --secondary-text-height: 18px;
   --button-size: 16px;
-  /* SPACING */
+  --standard-width: 1144px;
+
+  /* SPACING VARIABLES */
   --spacing-sm: 8px;
   --spacing-md: 16px;
   --spacing-lg: 32px;
   --spacing-xl: 64px;
 
-  --standard-width: 1144px;
-
+  /* COLOR VARIABLES*/
   --purple-1: #6962f7;
   --purple-2: #7000ff;
   --blue-1: #00d4ff;
@@ -129,7 +133,7 @@ p {
   font-weight: 400;
   margin: var(--spacing-md) 0;
 }
-/* Layout Styles  */
+/* LAYOUT STYLES  */
 .section-container {
   width: 100%;
   max-width: var(--standard-width);
@@ -203,6 +207,7 @@ p {
   letter-spacing: 0.25px;
 }
 
+/* BUTTON STYLES */
 .primary-button {
   font-family: var(--body-font);
   font-size: var(--button-size);
@@ -259,6 +264,7 @@ p {
   max-width: var(--standard-width);
   padding: 0 var(--spacing-md);
   margin: 0 0 var(--spacing-xl) 0;
+  box-sizing: border-box;
 }
 .menu {
   display: flex;
@@ -284,7 +290,11 @@ p {
   background: rgba(250, 250, 250, 0.5);
 }
 
-/* ANIMATED GRADIENT  */
+.hamburger-button {
+  display: none;
+}
+
+/* ANIMATED GRADIENT HERO BACKGROUND */
 
 #gradient-canvas {
   width: 200%;
@@ -302,6 +312,21 @@ p {
 
 /* HERO STYLES */
 
+.hero {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.hero-phone {
+  height: 628px;
+  transform: translate(32px, -32px);
+}
+
+.hero p {
+  max-width: 480px;
+}
+
 .button-container {
   display: flex;
   margin: var(--spacing-md) 0;
@@ -312,27 +337,13 @@ p {
   color: var(--purple-2);
 }
 
-.hero {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.hero p {
-  max-width: 480px;
-}
-
 .hero .hero-phone-container {
   height: 564px;
   align-items: flex-end;
 }
 
-.hero-phone {
-  height: 628px;
-  transform: translate(32px, -32px);
-}
+/* PARTNERS SECTION */
 
-/* Partners Section */
 .partners-section {
   width: 100%;
   display: flex;
@@ -351,6 +362,7 @@ p {
   height: 60px;
   place-self: center;
 }
+
 /* UNIFIED PLATFORM SECTION */
 
 .unified-platform-section {
@@ -415,6 +427,7 @@ p {
 }
 
 /* INTEGRATIONS SEECTION STYLES */
+
 .integrations-section {
   color: var(--text-light);
   /* background-color: var(--primary-accent); */
@@ -558,7 +571,9 @@ p {
   position: absolute;
   top: 10%;
 }
+
 /* VIRTUAL EVENTS SECTION */
+
 .virtual-events-section {
   display: flex;
   justify-content: center;
@@ -627,8 +642,6 @@ p {
   bottom: -70px;
   left: var(--spacing-xl);
   z-index: 3;
-  /* width: 140px;
-  height: 80px; */
 }
 
 .virtual-events-section .avatars img {
@@ -657,6 +670,7 @@ p {
 }
 
 /* GETTING STARTED SECTION */
+
 .getting-started-section {
   display: flex;
   justify-content: center;
@@ -745,4 +759,331 @@ p {
 .footer h3 {
   font-size: var(--h6-size);
   font-weight: 700;
+}
+
+/* MEDIA QUERIES */
+
+/* CUSTOM BREAKPOINT 1144px */
+
+@media only screen and (max-width: 1144px) {
+  :root {
+    --h1-size: 80px;
+    --h1-height: 85px;
+  }
+  /* GENERAL LAYOUT */
+  .section-container {
+    padding: 0 var(--spacing-md);
+  }
+  /* HERO SECTION */
+  .hero-phone {
+    height: 550px;
+    transform: translateY(-60px);
+  }
+
+  .hero .col-left {
+    width: 60%;
+  }
+  .hero .col-right {
+    width: 40%;
+  }
+}
+
+/* CUSTOM BREAKPOINT 850px */
+@media only screen and (max-width: 850px) {
+  :root {
+    --h1-size: 70px;
+    --h1-height: 75px;
+  }
+  /* HERO SECTION */
+  .hero-phone {
+    transform: translateY(-85px);
+  }
+  /* PARTNERS GRID */
+  .partners-grid img {
+    width: 100%;
+    height: auto;
+  }
+  /* INTEGRATIONS SECTION */
+
+  .integrations-section .col-left {
+    width: 60%;
+  }
+
+  .integrations-section .col-right {
+    width: 40%;
+  }
+}
+
+/* TABLET SIZE */
+@media only screen and (max-width: 768px) {
+  :root {
+    --h1-size: 58px;
+    --h1-height: 65px;
+    --h3-size: 34px;
+    --h6-size: 16px;
+  }
+
+  /* NAVBAR STYLES */
+  .navbar {
+    margin: var(--spacing-sm) 0 var(--spacing-lg) 0;
+  }
+
+  .navbar .menu {
+    display: none;
+  }
+
+  .navbar .navbar-button {
+    display: none;
+  }
+
+  .hamburger-button {
+    width: 50px;
+    height: 30px;
+    background-color: rgba(250, 250, 250, 0.25);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hamburger-button .bar {
+    width: 18px;
+    height: 2px;
+    background-color: var(--bg-white);
+    margin: 1px 0;
+  }
+
+  /* HERO STYLES */
+
+  .navbar {
+    margin: 0;
+  }
+
+  /* HERO STYLES */
+  #gradient-canvas {
+    height: 820px;
+  }
+  main {
+    margin: 0;
+  }
+
+  .hero .two-column {
+    align-items: center;
+  }
+
+  .hero .col-left {
+    width: 60%;
+  }
+
+  .hero .col-right {
+    width: 40%;
+  }
+
+  .hero-phone {
+    height: 450px;
+    transform: translateX(32px);
+  }
+  /* UNIFIED PLATFORM */
+
+  .unified-platform-section h2 {
+    width: 100%;
+  }
+
+  /* INTEGRATIONS SECTION */
+  .integrations-section .card-container {
+    flex-direction: column;
+  }
+
+  .integrations-section .card-container .card {
+    width: 100%;
+  }
+
+  /* WHY SWIPE SECTION */
+  .why-swipe-section {
+    padding: var(--spacing-md) 0 var(--spacing-xl) 0;
+  }
+
+  .why-swipe-section .card-container {
+    flex-wrap: wrap;
+  }
+  .why-swipe-section .card-container .card {
+    width: 50%;
+    /* margin: 0; */
+    margin: var(--spacing-md) 0;
+  }
+
+  /* GLOBAL SCALE SECTION */
+
+  .global-section .card-container {
+    flex-wrap: wrap;
+    margin: var(--spacing-xl) 0;
+  }
+
+  .global-section .card-container .card {
+    width: 50%;
+    margin: var(--spacing-md) 0;
+  }
+  /* GETTING STARTED SECTION */
+
+  .getting-started-section .two-column {
+    align-items: center;
+  }
+  .getting-started-section .col-right {
+    flex-wrap: wrap;
+  }
+  .getting-started-section .col-right .card {
+    width: 100%;
+    margin: var(--spacing-md) 0;
+  }
+}
+
+/* MOBILE SIZE */
+@media only screen and (max-width: 550px) {
+  :root {
+    --h1-size: 58px;
+    --h1-height: 65px;
+    --h3-size: 34px;
+    --h6-size: 16px;
+  }
+  .two-column {
+    flex-direction: column;
+  }
+
+  .two-column .col-left {
+    width: 100%;
+  }
+
+  .two-column .col-right {
+    width: 100%;
+    padding: 0;
+  }
+  /* NAVBAR STYLES */
+  .navbar {
+    margin: 0 0 var(--spacing-lg) 0;
+  }
+
+  /* HERO STYLES */
+  #gradient-canvas {
+    height: 820px;
+  }
+
+  main {
+    margin: var(--spacing-lg) 0 0 0;
+  }
+
+  .hero .two-column .hero-phone-container {
+    display: none;
+  }
+
+  .partners-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  /* UNIFIED PLATFORM SECTION */
+  .unified-platform-section {
+    padding: var(--spacing-md) 0;
+  }
+
+  /* INTEGRATIONS SECTION */
+  .integrations-section {
+    padding: var(--spacing-lg) 0;
+  }
+
+  .integrations-section::before {
+    height: 900px;
+  }
+
+  .integrations-section .col-right {
+    display: none;
+  }
+
+  /* WHY SWIPE */
+  .why-swipe-section {
+    padding: var(--spacing-xl) 0 var(--spacing-md) 0;
+  }
+
+  .why-swipe-section .card-container .card {
+    width: 100%;
+    margin: var(--spacing-sm) 0;
+  }
+
+  .why-swipe-section .card-container .card .icon {
+    height: 35px;
+  }
+
+  /* GLOBAL SECTION */
+  .global-section {
+    padding: var(--spacing-xl) 0 0 0;
+  }
+
+  .global-section .card-container {
+    margin: var(--spacing-md) 0;
+  }
+
+  .global-section .card-container .card {
+    width: 100%;
+    margin: var(--spacing-sm) 0;
+  }
+
+  #globe {
+    opacity: 10%;
+  }
+
+  /* VIRTUAL EVENTS SECTION */
+  .virtual-events-section {
+    padding: 0;
+  }
+
+  .virtual-events-section .swipe-sessions-card {
+    margin: var(--spacing-lg) 0;
+    width: 100%;
+  }
+
+  .virtual-events-section .swipe-sessions-card .secondary-text {
+    width: 100%;
+  }
+
+  .virtual-events-section .swipe-sessions-card .card-top {
+    height: 40%;
+  }
+
+  #sessions-logo {
+    width: 300px;
+  }
+
+  .footer .section-container {
+    flex-wrap: wrap;
+  }
+
+  .footer .col {
+    width: 50%;
+    margin: var(--spacing-md) 0;
+  }
+
+  .footer .col a {
+    font-size: 12px;
+  }
+
+  #footer-logo {
+    width: 70px;
+  }
+
+  /* GETTING STARTED SECTION */
+  .getting-started-section {
+    padding: var(--spacing-md) 0;
+  }
+
+  /* FOOTER */
+
+  .footer .icon-link img {
+    width: 18px;
+  }
+}
+
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
