--- a/Section31/Swipe Project/style.css
+++ b/Section31/Swipe Project/style.css
@@ -39,6 +39,7 @@
   --bg-white: #fff;
   --bg-light: #f7f9fc;
 
+  --standard-border-radius: 20px;
   --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
   --primary-gradient: linear-gradient(
     101.33deg,
@@ -49,10 +50,18 @@
   );
 }
 
+/* GENERAL ELEMENT STYLES */
+
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--body-font);
   color: var(--text-dark);
-  width: 100%;
   margin: 0;
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
@@ -213,7 +222,7 @@ p {
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   border: none;
   background-color: var(--primary-accent);
   color: var(--text-light);
@@ -230,7 +239,7 @@ p {
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   border: none;
   background-color: transparent;
   color: var(--primary-accent);
@@ -408,22 +417,25 @@ p {
   grid-area: card;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 #slack-invoice {
   grid-area: slack;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 #phone {
   grid-area: phone;
   width: 100%;
-  box-shadow: var(--standard-box-shadow);
 }
+
 #dash {
   grid-area: dash;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 /* INTEGRATIONS SEECTION STYLES */
@@ -487,12 +499,12 @@ p {
 #api-code {
   max-width: 470px;
   margin: 0 0 var(--spacing-md) 0;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
 }
 
 #terminal-code {
   max-width: 470px;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
 }
 
 /* WHY SWIPE SECTION */
@@ -607,7 +619,7 @@ p {
   width: 540px;
   height: 446px;
   box-shadow: var(--standard-box-shadow);
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   overflow: hidden;
 }
 
@@ -786,6 +798,16 @@ p {
   .hero .col-right {
     width: 40%;
   }
+
+  /* PARTNERS GRID */
+
+  .partners-section {
+    margin: -60px 0 0 0;
+  }
+
+  .partners-grid {
+    margin: 0 0 var (--spacing-xl) 0;
+  }
 }
 
 /* CUSTOM BREAKPOINT 850px */
@@ -840,7 +862,7 @@ p {
     width: 50px;
     height: 30px;
     background-color: rgba(250, 250, 250, 0.25);
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -884,6 +906,17 @@ p {
     height: 450px;
     transform: translateX(32px);
   }
+
+  /* PARTNERS GRID */
+
+  .partners-section {
+    margin: -20px 0 0 0;
+  }
+
+  .partners-grid {
+    margin: 0 0 var (--spacing-xl) 0;
+  }
+
   /* UNIFIED PLATFORM */
 
   .unified-platform-section h2 {
@@ -909,7 +942,6 @@ p {
   }
   .why-swipe-section .card-container .card {
     width: 50%;
-    /* margin: 0; */
     margin: var(--spacing-md) 0;
   }
 
@@ -974,6 +1006,12 @@ p {
 
   .hero .two-column .hero-phone-container {
     display: none;
+  }
+
+  /* PARTNERS GRID */
+
+  .partners-section {
+    margin: var(--spacing-xl) 0 var(--spacing-sm) 0;
   }
 
   .partners-grid {
@@ -1079,11 +1117,4 @@ p {
   .footer .icon-link img {
     width: 18px;
   }
-}
-
-html,
-body {
-  width: 100%;
-  position: relative;
-  overflow-x: hidden;
 }
